Archive2/c4/35104060c18ba8/output
main.cpp:6:19: error: extra ';' [-Wpedantic]
 FUNCTION(abcd, 12);
                   ^
main.cpp:7:17: error: extra ';' [-Wpedantic]
 FUNCTION(fff, 2);
                 ^
main.cpp:8:18: error: extra ';' [-Wpedantic]
 FUNCTION(qqq, 23);
                  ^
